<resources>

    <string name="app_name">QuizXm 1Z0-102</string>
    <string name="action_settings">Settings</string>
    <string name="question1">1. Which of these two are the part of WEB-INF in typical web applications:</string>
    <string name="question1_r1">web.xml</string>
    <string name="question1_r2">classes</string>
    <string name="question1_r3">META-INF</string>
    <string name="question1_r4">Enterprise Application Files</string>

    <string name="question2">2. Developer asked you to install all the Examples which come with WebLogic. Which type of installation you choose:</string>
    <string name="question2_r1">choose typical installation</string>
    <string name="question2_r2">choose custom installation</string>
    <string name="question2_r3">console installation</string>Silent installation
    <string name="question2_r4">Silent installation</string>

    <string name="question3">3.Which two statements are true about java EE shared libraries?</string>
    <string name="question3_r1">A shared library cannot be deployed to a cluster.</string>
    <string name="question3_r2">An application that is targeted to server1 can use a shared library that is targeted to server 2.</string>
    <string name="question3_r3">Multiple versions of the same shared library can be deployed and be active at the same time</string>
    <string name="question3_r4">A shared library is referenced through an applications deployment descriptor</string>

    <string name="question4">4.You use the Start button in the administration console to start managed2 successfully. Which two statements must be true?</string>
    <string name="question4_r1">Managad2 is part of a cluster</string>
    <string name="question4_r2">The Administration Server is running</string>
    <string name="question4_r3">Managed2 has applications deployed to it</string>
    <string name="question4_r4">The Node Manager for machine2 is configured and running.</string>

    <string name="question5">5.An EJB application is targeted to a cluster. Remote EJB clients can therefore take
advantage of WebLogic Server’s load balancing and failover capabilities.
However, a proxy server exists between the clients and the cluster, which performs IP
address translation. Which cluster attribute should you modify to ensure that load
balancing and failover work correctly?</string>
    <string name="question5_r1">Multicast Address</string>
    <string name="question5_r2">Persistent Store</string>
    <string name="question5_r3">Cluster Address</string>
    <string name="question5_r4">Migration Basis</string>

    <string name="question6">6.You run the default start manage Weblogic (.cmd in Windows) script as shown here: startmanageWeblogic.sh server1 http://192.168.1.102:8001. What does this do?</string>
    <string name="question6_r1">It starts the administration server named server1, which is running at 192.168.1.102.8001</string>
    <string name="question6_r2">It starts the managed server named server1, which is running at 192.168.1.102.8001</string>
    <string name="question6_r3">It starts the managed server named server1 whose Node Manager is running at 192.168.1.102.8001</string>
    <string name="question6_r4">It starts the Managed Server named server1 whose Administration Server is running at 192.168.1.102:8001.</string>


    <string name="question7">7.An application requires a JDBC data source, which you create in the domain. You name it but the administrator allot another domain name the same data source DatasourceB. Without modifying either domain, which is the best method to ensure that the application deploys successfully in both?</string>
    <string name="question7_r1">Create a separate application archive to use with each domain.</string>
    <string name="question7_r2">Create a separate deployment plan file to use with each domain.</string>
    <string name="question7_r3">Create and register a custom deployment listener.</string>
    <string name="question7_r4">Modify the application code to determine the current domain.</string>

    <string name="question8">8.Identify three options for Keystores in a servers configuration.</string>
    <string name="question8_r1">Demo Identity and Demo Trust</string>
    <string name="question8_r2">Demo Identity and Java Standard Trust</string>
    <string name="question8_r3">Custom Identity and Custom Trustt</string>
    <string name="question8_r4">Custom Identity and Command Line Trust</string>


    <string name="question9">9.When installing Oracle Weblogic Server 11g with the graphical installer, which three statements are true?</string>
    <string name="question9_r1">You must choose either a typical or a custom installation.</string>
    <string name="question9_r2">You install under Microsoft Windows because the graphical installer is available only for Window</string>
    <string name="question9_r3">You may create a new middleware home directory or choose an existing one.</string>
    <string name="question9_r4">You may install a JDK or choose one that was previously installed.</string>

    <string name="question10">10.Each domain has a directory called servers that contains subdirectories for each server in the domain. Your domain has a managed server named managed1. When will the managed1 directory be created?</string>
    <string name="question10_r1">When the managed1 server is defined in the configuration Wizard</string>
    <string name="question10_r2">When the domain is created</string>
    <string name="question10_r3">When the administration server comes up for the first time</string>
    <string name="question10_r4">When the managed1 server1 comes for the first time</string>


    <string name="title_activity_activity_main">QuizXm 1Z0-102</string>
    <string name="title_activity_screen2">QuizXm 1Z0-102</string>
    <string name="title_activity_screen3">QuizXm 1Z0-102</string>
    <string name="title_activity_screen4">QuizXm 1Z0-102</string>
    <string name="title_activity_screen5">QuizXm 1Z0-102</string>
    <string name="title_activity_screen6">QuizXm 1Z0-102</string>
    <string name="title_activity_screen7">QuizXm 1Z0-102</string>
    <string name="title_activity_screen8">QuizXm 1Z0-102</string>
    <string name="title_activity_screen9">QuizXm 1Z0-102</string>
    <string name="title_activity_screen10">QuizXm 1Z0-102</string>
    <string name="title_activity_splash">Splash</string>
    <string name="xlogo">xlogo</string>
    <string name="title_activity_screen11">Screen11</string>


</resources>
