<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.mdi.br.quizxm.Screen9"
    tools:showIn="@layout/activity_screen9">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/question9"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="20dp"
        android:textSize="12sp"
        android:textColor="#002aff" />


    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/question9_r1"
        android:id="@+id/switch1"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginBottom="20dp"
        android:checked="false" />

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/question9_r2"
        android:id="@+id/switch2"
        android:layout_below="@+id/switch1"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        />

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/question9_r3"
        android:id="@+id/switch3"
        android:layout_below="@+id/switch2"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/switch2"
        android:layout_marginBottom="20dp" />

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/question9_r4"
        android:id="@+id/switch4"
        android:layout_below="@+id/switch3"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/switch3"
        android:layout_marginBottom="20dp"
        android:checked="false"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/txtPontos9"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
